--- a/css/style.scss
+++ b/css/style.scss
@@ -5,12 +5,15 @@ $bg: #3d5673;
 // Margin r-l
 $auto: auto;
 // Main text color
-$textc: white;
+$textc: #ffffff;
 //Contact & video section colors
 $con_v: #855b63;
 // Top margin for some divs
 $tm: 40px;
 $m_padding: 5%;
+
+
+
 
 
 html,body{
@@ -108,13 +111,6 @@ clear: both;
 text-align: center;
 }
 
-#crates{
-max-width: 1000px;
-margin-right: auto;
-margin-left: auto;
-padding-top: 30px;
-padding-bottom: 30px;
-}
 
 .head {
 text-align: center;
@@ -125,6 +121,15 @@ padding-top: 20px;
 font-weight: normal;
 }
 
+#crates{
+max-width: 1000px;
+margin-right: auto;
+margin-left: auto;
+padding-top: 30px;
+padding-bottom: 30px;
+
+
+
 .box{
 width: 200px;
 height: 200px;
@@ -134,6 +139,7 @@ margin: 20px;
 display: inline-block;
 
 }
+} // .box nested inside of 
 
 
 
@@ -189,17 +195,17 @@ cursor: pointer;
 #portfolio{
 background-color: #567496;
 text-align: center;
-}
 
-#portfolio .ptitle{
+
+.ptitle{
 display: inline-block;
 margin: 40px;
 border: 15px solid $bg;
-}
-
-.ptitle{
 position: relative;
 }
+} // .ptitle nested inside of #portfolio
+
+
 
 .imgDescription {
   position: absolute;
@@ -249,16 +255,18 @@ color: #d6d6d6;
 #wresume{
 background-color: $bg;
 text-align: center;
-}
 
-#wresume img{
+
+img{
 width: 40%;
 margin-top: $tm;
 margin-bottom: 20px;
 }
+} // img nested inside of #wresume
 
 #wresume p{
-color: $textc;
+// Sass darken function
+color: darken( $textc, 5% );
 font-size: 1.5em;
 padding-right: $m_padding;
 padding-left: $m_padding;
@@ -289,7 +297,8 @@ padding-bottom: 40px;
 #contact{
 text-align: center;
 transition: all 0.5s ease;
-background-color: $con_v;
+//Sass function for saturation
+background-color: saturate( $con_v, 5% );
 }
 
 #contact .social{
