--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,12 @@ body {
   clear: both;
   text-align: center; }
 
-.head {
+.htop, .head {
   text-align: center;
   color: #ffffff;
-  font-size: 2.5em;
+  font-size: 2.5em; }
+
+.head {
   margin: 0;
   padding-top: 20px;
   font-weight: normal; }
@@ -131,7 +133,17 @@ body {
 #portfolio {
   background-color: #567496;
   text-align: center; }
-  #portfolio .ptitle {
+  #portfolio .ptitle1 {
+    display: inline-block;
+    margin: 40px;
+    border: 15px solid #3d5673;
+    position: relative; }
+  #portfolio .ptitle2 {
+    display: inline-block;
+    margin: 40px;
+    border: 15px solid #3d5673;
+    position: relative; }
+  #portfolio .ptitle3 {
     display: inline-block;
     margin: 40px;
     border: 15px solid #3d5673;
